fully integrated flow
